# ChangeLog for net-im/psi-autoreply
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Dec 2010; Nikoli <nikoli@lavabit.com>
  +psi-autoreply-0.3.0_pre3377.ebuild:
  version bump

  21 Oct 2010; Nikoli <nikoli@lavabit.com>
  +psi-autoreply-0.3.0_pre3076.ebuild:
  version bump

  07 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
  create ChangeLog
