@@ -1,7 +1,9 @@
 DIST psi-autoreply-0.3.0_pre3076.tar.xz 8380 RMD160 796ee15dfa128eeecc77d64147e4d98f3422f0d3 SHA1 932cf4e4fd92f59cc30ca32f8e4cc2a45ef133bb SHA256 ff7a7d57d322d5026123b3e6130d86ada8e71572aa9e67bda6968d248eb8006a
 DIST psi-autoreply-0.3.0_pre3377.tar.xz 8400 RMD160 f48402e54bebfb40a028a9ef111a3a5a6e4ed0ca SHA1 eff70cbb1df216e80478f727a6db0c312dcd101d SHA256 3fb3e476780c953d7824ba50899cba5bcd9a8b4c695970639acce888fe9715e5
+DIST psi-autoreply-0.3.0_pre3481.tar.xz 8480 RMD160 bf655f4da3790967a665c26f3f46152ca97eb764 SHA1 73294f092ba802ce0502d8c09fe82e1aa90d06d5 SHA256 d199cd06297abbce839ca1cd333eab1b07e9841f8e24ac4788a7b83073bbe1f6
 EBUILD psi-autoreply-0.3.0_pre3076.ebuild 221 RMD160 b9f5288cee00b553c3a7b80cf45952e763a3ebce SHA1 2cb0193f894ea58bc43eac53ef7ba1c4d6231d70 SHA256 4484d0b08c97bdd501199129fe601e50d5d223df326d48bb030e23471179b416
 EBUILD psi-autoreply-0.3.0_pre3377.ebuild 221 RMD160 b9f5288cee00b553c3a7b80cf45952e763a3ebce SHA1 2cb0193f894ea58bc43eac53ef7ba1c4d6231d70 SHA256 4484d0b08c97bdd501199129fe601e50d5d223df326d48bb030e23471179b416
+EBUILD psi-autoreply-0.3.0_pre3481.ebuild 221 RMD160 9913fc46c6f5097ef44512164dd0b61f808bdbb6 SHA1 c81a21032ddf326ab140cc8b84ab7705798b45f3 SHA256 e5723510c70407a55ee054194e1fac2686f5500fa0fba3ac0de163b77348d6c4
 EBUILD psi-autoreply-9999.ebuild 212 RMD160 86740141765ff7454f1d60e207134c9e46018ed8 SHA1 2cc143c97858866855d58dc25f0c80c7a02ba8a5 SHA256 fe3fda9bab756e11a89bd99cc8646678f8114a9ce5594297f0a140707b471bd5
-MISC ChangeLog 401 RMD160 7139e0cfdfb8e32f0149396bd2f438db010f8c95 SHA1 ab3371e6c029190824f1c1aa86aa73311fa916de SHA256 6ae154adbee9030afc6e809f1406ef952b80dd50851a2bed1b4da00ce42d8caa
+MISC ChangeLog 499 RMD160 b4b52668e542eb2f6a45c6f4ecdf16de1da16e5a SHA1 d1e407d4430f05e75f41bccfe3bcca11226ef36a SHA256 5511bc48cbaf56c394359511e99bd212dd284424333d087ae79dd55c2f101d05
 MISC metadata.xml 324 RMD160 c4b00137377eb7db15aa57fff5454ba11161832e SHA1 2d166ebbfffff8b5a7bb79f1a04778963e3a50ff SHA256 1e6031c4f796134e69f79f4a13893604c3eeb35c04002f891e1af2757c9d15ef
