@@ -1,6 +1,10 @@
 # ChangeLog for net-im/psi-autoreply
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jan 2011; Nikoli <nikoli@lavabit.com>
+  +psi-autoreply-0.3.0_pre3481.ebuild:
+  version bump
 
   12 Dec 2010; Nikoli <nikoli@lavabit.com>
   +psi-autoreply-0.3.0_pre3377.ebuild:
